--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ['OPENAI_API_KEY'] = \"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\"\n"
+    "os.environ['OPENAI_API_KEY'] = \"...\"\n"
    ]
   },
   {
